--- a/2_Hypoxia/R/kmer.qmd
+++ b/2_Hypoxia/R/kmer.qmd
@@ -1,5 +1,5 @@
 ---
-title: "rRNADepletion_s4ter"
+title: "rRNADepletion_hypoxia"
 subtitle: "k-mer analysis"
 author: "Lachlan Baer"
 date-modified: today
@@ -69,7 +69,7 @@ addInfo <- readRDS(here("1_Psen2S4Ter/Rdata/addInfo.Rds"))
 
 ```{r k5counts}
 k5files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k5",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k5",
     pattern = ".dumps", full.names = TRUE
 )
 k5counts <- lapply(k5files, function(x){
@@ -210,7 +210,7 @@ k5topTable <- glmQLFTest(k5fit) %>%
 
 ```{r k6counts}
 k6files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k6",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k6",
     pattern = ".dumps", full.names = TRUE
 )
 k6counts <- lapply(k6files, function(x){
@@ -381,7 +381,7 @@ k6topTable <- glmQLFTest(k6fit) %>%
 
 ```{r k7counts}
 k7files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k7",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k7",
     pattern = ".dumps", full.names = TRUE
 )
 k7counts <- lapply(k7files, function(x){
@@ -552,7 +552,7 @@ k7topTable <- glmQLFTest(k7fit) %>%
 
 ```{r k8counts}
 k8files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k8",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k8",
     pattern = ".dumps", full.names = TRUE
 )
 k8counts <- lapply(k8files, function(x){
@@ -722,7 +722,7 @@ k8topTable <- glmQLFTest(k8fit) %>%
 
 ```{r k9counts}
 k9files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k9",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k9",
     pattern = ".dumps", full.names = TRUE
 )
 k9counts <- lapply(k9files, function(x){
@@ -864,7 +864,7 @@ k9topTable <- glmQLFTest(k9fit) %>%
 
 ```{r k10counts}
 k10files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k10",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k10",
     pattern = ".dumps", full.names = TRUE
 )
 k10counts <- lapply(k10files, function(x){
@@ -1035,7 +1035,7 @@ k10topTable <- glmQLFTest(k10fit) %>%
 
 ```{r k11counts}
 k11files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k11",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k11",
     pattern = ".dumps", full.names = TRUE
 )
 k11counts <- lapply(k11files, function(x){
@@ -1178,7 +1178,7 @@ k11topTable <- glmQLFTest(k11fit) %>%
 
 ```{r k12counts}
 k12files <- list.files(
-    "/mnt/phoenix/hpcfs/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k12",
+    "/mnt/hpcfs/a1647910/20200310_rRNADepletion/1_Psen2S4Ter/analysis-kmer/results/jellyfish/k12",
     pattern = ".dumps", full.names = TRUE
 )
 k12counts <- lapply(k12files, function(x){
